# MagicFishing

./: BaseicInfo.h  CMakeLists copy.txt  CMakeLists.txt  SettingWidget.hpp  TimelineWidget.hpp  Tray.hpp  WaterBase.hpp  WorkTimeWindow.hpp  app.rc  main copy.cpp  main.cc  main.cpp  main.cpp.bak  re.md  resources.qrc  water.iss
utils/: WindowApi.cpp  WindowApi.hpp
